--- a/config/database.yml
+++ b/config/database.yml
@@ -86,4 +86,12 @@ test:
 production:
   <<: *default
   database: mwamba_development_production
-  
+  username: postgres
+  password: <%= ENV["MWAMBA_DEVELOPMENT_DATABASE_PASSWORD"] %>
+
+
+  # production:
+  # <<: *default
+  # database: Lifeline_L_production
+  # username: Lifeline_L
+  # password: <%= ENV["LIFELINE_L_DATABASE_PASSWORD"] %>
