--- a/config/database.yml
+++ b/config/database.yml
@@ -20,14 +20,12 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: postgres
-  password: trance
+ 
 
 development:
   <<: *default
   database: mwamba_development_development
-  username: postgres
-  password: trance
+ 
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -85,6 +83,10 @@ test:
 #
 production:
   <<: *default
+  database: mwamba_development_production
+  adapter: postgresql
+  
+
 
 
   # production:
